# cidre-dev

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-09-cidre-implementation.md
docs/superpowers/specs/: 2026-04-09-cidre-design.md
site/: index.html  style.css
src/cidre/: __init__.py  cli.py  config.py  db.py
src/cidre/indexer/: daemon.py  photos.py  pipeline.py  scanner.py
src/cidre/providers/: base.py  ollama.py  openai.py
src/cidre/search/: engine.py  query.py
src/cidre/vision/: categorize.py  describe.py
tests/: compare_models.py  conftest.py  test_cli.py  test_config.py  test_daemon.py  test_db.py  test_integration.py  test_photos.py  test_pipeline.py  test_providers.py  test_scanner.py  test_search.py  test_vision.py
